--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@
 
 title: Manush Bhatt
 email: bhattmanush@gmail.com
+avatar: pics/me.jpg
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
